--- a/carousel/index.html
+++ b/carousel/index.html
@@ -80,8 +80,8 @@
 
         <div class="container">
           <div class="carousel-caption text-left">
-            <h1>Example headline.</h1>
-            <p>Some representative placeholder content for the first slide of the carousel.</p>
+            <h1>Metodologia</h1>
+            <p></p>
             <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
           </div>
         </div>
@@ -91,9 +91,9 @@
 
         <div class="container">
           <div class="carousel-caption">
-            <h1>Another example headline.</h1>
-            <p>Some representative placeholder content for the second slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+            <h1>Trabalho em equipe</h1>
+            <p>Todo sucesso é fruto de um grande trabalho em união.</p>
+            <p><a class="btn btn-lg btn-primary" href="#">Saiba Mais</a></p>
           </div>
         </div>
       </div>
@@ -102,9 +102,9 @@
 
         <div class="container">
           <div class="carousel-caption text-right">
-            <h1>One more for good measure.</h1>
-            <p>Some representative placeholder content for the third slide of this carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+            <h1>Robótica</h1>
+            <p>Despertando a criatividade, competência e desenvolvendo o interesse trabalhando em equipe. </p>
+            <p><a class="btn btn-lg btn-primary" href="#">Saiba mais</a></p>
           </div>
         </div>
       </div>
