--- a/carousel/index.html
+++ b/carousel/index.html
@@ -81,7 +81,7 @@
         <div class="container">
           <div class="carousel-caption text-left">
             <h1>Metodologia</h1>
-            <p></p>
+            <p>Formas inovadoras de ensino com plataformas para complementar nos estudos de sala de aula e formas dinâmicas de aprender.</p>
             <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
           </div>
         </div>
@@ -103,7 +103,7 @@
         <div class="container">
           <div class="carousel-caption text-right">
             <h1>Robótica</h1>
-            <p>Despertando a criatividade, competência e desenvolvendo o interesse trabalhando em equipe. </p>
+            <p>Despertando a criatividade, competência e desenvolvendo o interesse de trabalho em equipe. </p>
             <p><a class="btn btn-lg btn-primary" href="#">Saiba mais</a></p>
           </div>
         </div>
@@ -131,15 +131,15 @@
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
-        <h2>Heading</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+        <h2>Seminários</h2>
+        <p>O seminário escolar é uma apresentação feita por um ou mais alunos para sua própria turma. Ele nos ajuda a desenvolver o trabalho em equipe, organização de tempo, fala em público e organizar melhor as ideias sobre determinado assunto.</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
-        <h2>Heading</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
+        <h2>Desenvolvimento de Sistema</h2>
+        <p>Desenvolve programas para computadores e outros dispositivos computacionais. </p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
