--- a/carousel/index.html
+++ b/carousel/index.html
@@ -126,36 +126,31 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-8 ">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-        
-
+        <img src="img/semi.jpg" class="bd-placeholder-img" width="300" height="300"/>        
         <h2>Seminários</h2>
         <p>O seminário escolar é uma apresentação feita por um ou mais alunos para sua própria turma. Ele nos ajuda a desenvolver o trabalho em equipe, organização de tempo, fala em público e organizar melhor as ideias sobre determinado assunto.</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-8">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+        <img src="img/desenvolvimento.jpg" class="bd-placeholder-img" width="300" height="300"/>
 
         <h2>Desenvolvimento de Sistemas</h2>
-        <p>Desenvolve programas para computadores e outros dispositivos computacionais. Os alunos criam sites de assuntos diversos através da programação que aprendem em prática na sala de computação.</p>
-       
+        <p>Desenvolve programas para computadores e outros dispositivos computacionais. Os alunos criam sites de assuntos diversos através da programação que aprendem em prática na sala de computação.</p>      
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-8">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+        <img src="img/biblioteca.jpg" class="bd-placeholder-img" width="300" height="300"/>
 
         <h2>Biblioteca</h2>
         <p>O colégio possui uma biblioteca com livros para todo tipo de gosto e matéria para fazer pesguisas ou levar um livro para ler em casa no momento de lazer e após alguns dias fazer a devolução.</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-8">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
+        <img src="img/jogos.jpg" class="bd-placeholder-img" width="300" height="300"/>
         <h2>Jogos</h2>
-        <p></p>
+        <p>Os Jogos Escolares são levados bastante a sério com a determinação dos alunos que antes dos jogos se dedicam treinando no período da tarde na quadra de areia com ajuda do professor e incluso a diversão entre eles. </p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-8">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
+        <img src="img/labor.jpg" class="bd-placeholder-img" width="300" height="300"/>
         <h2>Laboratório</h2>
-        <p></p>
+        <p>No laboratórios colocamos em prática o conteúdo aprendido dentro da sala de aula de forma dinâmica, criativa de forma  interdisciplinar. </p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -210,8 +205,8 @@
 
   <!-- FOOTER -->
   <footer class="container">
-    <p class="float-right"><a href="#">Colégio Sesi da Indústria sempre buscando a inovação.</a></p>
-    <p>&copy; 2017-2022 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    <p class="float-right"><a href="#">Colégio Sesi da Indústria.</a></p>
+    <p> @colégiosesiapucarana &middot; <a href="#">Inovação</a> &middot; <a href="#">Diferença</a></p>
   </footer>
 </main>
 
