--- a/carousel/index.html
+++ b/carousel/index.html
@@ -84,9 +84,9 @@
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" role="img" aria-label=" :  " preserveAspectRatio="xMidYMid slice" focusable="false"><title> </title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"> </text></svg>
-
-        <div class="container">
+         <img src="img/eqi.jpg" class="bd-placeholder-img" width="300" height="300"/>
+       
+         <div class="container">
           <div class="carousel-caption">
             <h1>Trabalho em equipe</h1>
             <p>Todo sucesso é fruto de um grande trabalho em união.</p>
@@ -165,7 +165,7 @@
         <p class="lead">Palestras sobre O mundo dos negócios com os empreendedores no mercado de Educação on-line André Ryan Trujilio e Gustavo da Costa da Silva muitos e com profissionais de muitas outras área.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <img src="img/palestra.jpg" class="bd-placeholder-img" width="300" height="300"/>
 
       </div>
     </div>
@@ -178,7 +178,7 @@
         <p class="lead">Eventos e desafios em comemoração dos 18 anos do colégio Sesi foram realizados com arrecadação de alimentos e feita a doação para uma instituição de apoio social.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <img src="img/doar.jpg" class="bd-placeholder-img" width="300" height="300"/>
 
       </div>
     </div>
@@ -191,7 +191,7 @@
         <p class="lead">Visita as empresas como SLC-bones e Forquímica entre outras acontecem por conta de um trabalho chamado Hackateen com intuído de aprender mais sobre a produção dos produtos, identificar problemas e apresentar as soluções em um curto prazo de tempo através de um seminário.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <img src="img/visita.jpg" class="bd-placeholder-img" width="300" height="300"/>
 
       </div>
     </div>
